[project]
name = "real-estate-intel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KimDoBosk", email = "yatasse@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
real-estate-intel = "real_estate_intel:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, pyflakes, import sorting